# mlops-umesh

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  final_report.md  mlflow_runs_summary.md
k8s/: api-deployment.yaml  api-service.yaml  namespace.yaml  ui-deployment.yaml  ui-service.yaml
mlruns/0/: meta.yaml
mlruns/827868829186113828/: meta.yaml
mlruns/827868829186113828/27434086a14b4c5ebf718afb605db23b/: meta.yaml
mlruns/827868829186113828/95d39907346546b082c27ec733d3d703/: meta.yaml
mlruns/827868829186113828/99b43f4b41f64918bdc25983f51f7434/: meta.yaml
mlruns/827868829186113828/9df53504a8c343be81b43139b3e89d75/: meta.yaml
mlruns/827868829186113828/d6b8fa538087486ea5286806e56b146e/: meta.yaml
mlruns/827868829186113828/dd74ca4f31a04c0a99674264eb90083f/: meta.yaml
models/: metadata.json  model.joblib
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: heart_api_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
reports/screenshots/: README.md  api_health.txt  podman_ps.txt  predict_response.txt  prometheus_targets.json  service_evidence_terminal.txt
scripts/: bootstrap.py  build_report_pdf.py  download_data.py  run_eda.py  service_evidence.py  smoke_predict.py  train_model.py
src/heart_disease_mlops/: __init__.py  api.py  config.py  data.py  features.py  schemas.py  training.py
tests/: test_api.py  test_data_processing.py  test_features.py
ui/: streamlit_app.py
(+166 files in other folders)
